--- a/atc/app/globals.css
+++ b/atc/app/globals.css
@@ -1,148 +1,109 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Body and Global Styling */
 body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f0f8ff;
-}
-
-/* globals.css */
-header {
-  display: flex; /* Make it a flex container */
-  justify-content: space-around; /* Space items evenly */
-  align-items: center; /* Center items vertically */
-  background-color: #001f3f; /* Header background color */
-  color: white; /* Text color */
-  padding: 15px 20px; /* Padding for the header */
-}
-
-nav {
-  display: flex; /* Make the nav a flex container */
-  gap: 15px; /* Space between links */
-}
-
-nav a {
-  color: white; /* Link text color */
-  text-decoration: none; /* Remove underline */
-  padding: 10px 15px; /* Padding around the links */
-  border-radius: 5px; /* Rounded corners */
-  transition: background-color 0.3s; /* Smooth transition */
-}
-
-nav a:hover {
-  background-color: rgba(255, 255, 255, 0.2); /* Background on hover */
-}
-
-footer {
-  background-color: #001f3f;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-}
-
-.home {
-  text-align: center;
-  padding: 50px;
-}
-
-.links a {
-  display: inline-block;
-  margin: 20px 0;
-  padding: 10px 20px;
-  background-color: #0070f3;
-  color: white;
-  border-radius: 5px;
-  text-decoration: none;
-}
-
-.page {
-  padding: 20px;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-ul li {
-  cursor: pointer;
-  background-color: #0070f3;
-  color: white;
-  padding: 10px;
-  margin: 10px 0;
-  border-radius: 5px;
-}
-
-.output {
-  margin-top: 20px;
-}
-
-.output h2 {
-  font-size: 1.5em;
-}
-
-/* Basic styling */
-.container {
-  height: 100vh;
+  background: linear-gradient(135deg, #1e3a8a, #1f2937);
+  font-family: 'Inter', sans-serif;
+  color: #e0e7ff;
+  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #001f3f;
-  color: white;
-  font-family: 'Arial', sans-serif;
+  padding: 1rem;
+  transition: background-color 0.3s ease-in-out;
 }
 
-/* Radar animation */
-.atcContainer {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  border: 2px solid #ffffff;
-  animation: radar-spin 10s linear infinite;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+/* Container and Layout Styling */
+.container {
+  padding: 2rem;
+  font-size: 1.3rem;
+  max-width: 48rem;
+  margin: 0 auto;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 1rem;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
-.radar {
+.container:hover {
+  box-shadow: 0 12px 36px rgba(0, 0, 0, 0.4);
+}
+
+/* Form Styling */
+form input {
   width: 100%;
-  height: 100%;
-  background: conic-gradient(transparent 0%, rgba(0, 255, 0, 0.5) 50%, transparent 100%);
+  padding: 1rem;
+  border: 2px solid #4A90E2;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
+  margin-right: 1rem;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: rgba(31, 41, 55, 0.7);
+  color: #f3f4f6;
+  outline: none;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
+}
+
+form input:hover {
+  transform: scale(1.02);
+}
+
+form input:focus {
+  outline: none;
+  background-color: rgba(31, 41, 55, 1);
+  border-color: #007BFF;
+  box-shadow: 0 6px 15px rgba(0, 123, 255, 0.2);
+}
+
+form input::placeholder {
+  color: #a0a4a8;
+  font-style: italic;
+}
+
+form button {
+  padding: 1rem;
+  background-color: #007BFF;
+  border: none;
+  border-radius: 0.5rem;
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
+}
+
+form button:hover {
+  background-color: #0056b3;
+  box-shadow: 0 6px 12px rgba(0, 86, 179, 0.3);
+  transform: translateY(-3px);
+}
+
+form button:active {
+  background-color: #003f8a;
+  transform: translateY(0);
+}
+
+/* Loader and Image Styling */
+.loader-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 2rem;
+}
+
+.loader {
+  border: 6px solid rgba(255, 255, 255, 0.2);
+  border-top: 6px solid #4f46e5;
   border-radius: 50%;
-  animation: radar-sweep 3s linear infinite;
+  width: 50px;
+  height: 50px;
+  animation: spin 1s linear infinite;
 }
 
-.centerText {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.description {
-  margin-top: 20px;
-}
-
-h1, h2 {
-  margin: 0;
-  font-size: 2rem;
-}
-
-p {
-  font-size: 1.2rem;
-  margin-top: 5px;
-}
-
-/* Animations */
-@keyframes radar-spin {
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes radar-sweep {
+@keyframes spin {
   0% {
     transform: rotate(0deg);
   }
@@ -151,92 +112,345 @@ p {
   }
 }
 
-.commands-container {
-  max-height: 300px; /* Adjust as needed */
-  overflow-y: auto;
-  background-color: #e0e0e0;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  padding: 10px;
+.image-wrapper {
+  width: 100%;
+  aspect-ratio: 1 / 1;
+  position: relative;
+  border-radius: 1rem;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
 }
 
-.command {
-  padding: 10px;
-  margin: 5px 0;
-  background-color: #0070f3;
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
+.image-wrapper:hover {
+  transform: scale(1.05);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
 }
 
-.command:hover {
-  background-color: #005bb5;
+.image-wrapper img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.communication-panel {
-  padding: 10px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.studentsPage {
+/* Text Styling */
+p {
   text-align: center;
-  padding: 50px;
-  background-color: #f4f4f4;
+  font-size: 1.3rem;
+  color: #ffffff;
+  margin-top: 1rem;
+  line-height: 1.5;
+  transition: color 0.3s ease-in-out;
 }
 
-.content {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
+p:hover {
+  color: #cbd5e1;
 }
 
-.role {
-  width: auto; /* Fit to text */
-  background-color: #0070f3;
-  color: white;
-  padding: 20px;
-  border-radius: 10px;
-}
-
-a {
-  display: block;
-  margin-top: 30px;
-  padding: 10px;
-  background-color: #001f3f;
-  color: white;
-  border-radius: 5px;
+/* Navigation Links */
+nav a {
+  color: #e0e7ff;
   text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
 }
 
-/* Flowchart */
-.flowchart {
-  margin-top: 40px;
+nav a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #60a5fa;
+  transform: translateY(-2px);
 }
 
-.flow-step {
-  background-color: #0070f3;
-  color: white;
-  padding: 15px;
-  margin: 10px auto; /* Centered */
-  border-radius: 5px;
-  width: fit-content; /* Fit to text */
+nav a:active {
+  background-color: rgba(255, 255, 255, 0.2);
+  transform: translateY(0);
 }
 
-.arrow {
-  font-size: 2rem;
-  margin: 0; /* No margin for arrows */
+/* About Page Specific */
+.about-container {
+  padding: 2rem;
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: rgba(31, 41, 55, 0.7);
+  border-radius: 1rem;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
-/* Responsive Layout */
+.about-container:hover {
+  box-shadow: 0 12px 36px rgba(0, 0, 0, 0.4);
+}
+
+.about-title {
+  font-size: 2.5rem;
+  color: #f3f4f6;
+  margin-bottom: 1rem;
+}
+
+.about-text {
+  font-size: 1.2rem;
+  color: #94a3b8;
+  line-height: 1.6;
+  padding-bottom: 1rem;
+}
+
+button {
+  padding: 0.8rem 1.5rem;
+  background-color: #4A90E2; /* Adjust as needed */
+  border: none;
+  /* border: 2px solid #ffffff; */
+  border-radius: 0.5rem;
+  color: #fff;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056b3; /* Adjust hover color */
+}
+
+.download-icon {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  margin-top: 0.5rem; /* Adjust as needed */
+  transition: transform 0.2s;
+}
+
+.download-icon:hover {
+  transform: scale(1.1); /* Slightly enlarge on hover */
+}
+
+
+/* ############################################ */
+
+
+.slideshow {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+  border-radius: 12px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+.caption {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+  font-size: 1.25rem;
+  text-align: center;
+  padding: 10px 0;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+
+/* Dots Styles */
+.dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.dot {
+  height: 12px;
+  width: 12px;
+  margin: 0 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #717171;
+}
+
+.dot:hover {
+  background-color: #333;
+}
+
+/* Responsive Slideshow */
 @media (max-width: 768px) {
-  .content {
-    flex-direction: column;
+  .slideshow {
+    height: 300px;
   }
 
-  .role {
-    width: auto; /* Fit to text */
+  .caption {
+    font-size: 1rem;
   }
+}
+
+
+/* How to Use Section */
+.how-to-use ol {
+  list-style-position: inside;
+  padding-left: 0;
+  counter-reset: step-counter;
+}
+
+.how-to-use li {
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+  position: relative;
+  padding-left: 35px;
+}
+
+.how-to-use li::before {
+  content: counter(step-counter);
+  counter-increment: step-counter;
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #ff7f50;
+  width: 25px;
+  height: 25px;
+  background-color: #f0f0f0;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.how-to-use h2 {
+  text-align: center;
+  color: #d6d6d8;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+
+
+/* Responsive Styles */
+@media (max-width: 768px) {
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+
+  .hero p {
+    font-size: 1rem;
+  }
+
+  .how-to-use h2 {
+    font-size: 1.75rem;
+  }
+
+  .how-to-use ol {
+    font-size: 1.125rem;
+  }
+}
+
+/* hero section */
+.hero {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.hero h1 {
+  color: #d6d6d8;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.hero p {
+  font-size: 1.2rem;
+  max-width: 600px;
+  margin-bottom: 20px;
+}
+
+/* menu */
+/* Add some custom styles for the mobile menu */
+.fixed-menu {
+  border-radius: 10px 0 0 10px;
+  width: 240px; /* Adjusted menu width */
+  box-shadow: -2px 0 15px rgba(0, 0, 0, 0.3); /* Add shadow for depth */
+  background: linear-gradient(145deg, #222, #333); /* Gradient background for cool effect */
+}
+
+/* Smooth transition for sliding the menu */
+.menu-transition {
+  transition: transform 0.3s ease-in-out;
+}
+
+/* Close button hover effect */
+.close-button {
+  transition: color 0.2s;
+}
+
+.close-button:hover {
+  color: #ff5a5f;
+}
+
+/* Menu link hover effects */
+.menu-item {
+  font-size: 1.2rem;
+  padding: 1rem 0;
+  text-align: center;
+  transition: color 0.3s;
+}
+
+.menu-item:hover {
+  color: #1e90ff;
+}
+
+
+.flowchart {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+
+.flowbox {
+  background-color: #e0e0e0;
+  padding: 15px;
+  margin: 10px;
+  border-radius: 8px;
+  text-align: center;
+  width: 200px;
+  font-size: 1.1em;
+}
+
+
+.h2 {
+  text-align: center;
+  color: #d6d6d8;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
 }
